--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,27 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.value {
+  font-size: 40px;
+  font-weight: bold;
+  color: #333;
+}
+
+.label {
+  font-size: 16px;
+  color: #777;
+}
